# viventium-librechat

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  Dockerfile  Dockerfile.multi  deploy-compose.yml  docker-compose.override.yml.example  docker-compose.yml  package-lock.json  package.json  rag.yml  viventium-start.sh
.devcontainer/: Dockerfile  docker-compose.yml
.github/: CONTRIBUTING.md  playwright.yml
api/: jest.config.js  package.json
client/: index.html  package.json  vite.config.ts
config/: deployed-update.js  issue-password-reset-link.js
e2e/: librechat.channels.yaml  playwright.config.channels.ts
redis-config/: .gitignore  redis-7001.conf  redis-7002.conf  redis-7003.conf  start-cluster.sh  stop-cluster.sh
scripts/: benchmark-activation-providers.js  debug-anthropic-fetch.cjs  run-productivity-activation-evals.js  skyvern-mcp-lite.py  skyvern-mcp.sh  update_balances.js  verify-docker-build-context.cjs  verify-viventium-docker-image.cjs  viv-artifact-paths.js  viv-user-sync.js  viventium-agent-runtime-models.js  viventium-audit-production-dependencies.js  viventium-audit-production-dependencies.test.js  viventium-audit-production-runtime.js  viventium-memory-dedupe.js  (+12 more)
viventium/MCPs/scheduling-cortex/: README.md  pyproject.toml  requirements.txt
viventium/MCPs/scheduling-cortex/scheduling_cortex/: __init__.py  dispatch.py  models.py  scheduler.py  server.py  storage.py  utils.py
viventium/MCPs/scheduling-cortex/tests/: test_bootstrap.py  test_dispatch.py  test_prompt_contract.py  test_scheduler.py  test_storage.py
(+688 files in other folders)
